# graphene-desktop

./: CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt  async-sequence.h  background.c  client.c  client.h  dialog.c  dialog.h  main.c  network.c  notifications.c  notifications.h  panel-clock.c  panel-internal.h  panel-launcher.c  panel-settings.c  panel.c  panel.h  percent-floater.c  pkauthdialog.c  session.c  session.h  settings-battery.h  status-icons.c  status-icons.h  status-notifier-host.c  status-notifier-host.h  status-notifier-watcher.c  wm.c
src/csk/: audio.c  backlight.c  backlight.h  battery.c  battery.h  network.c  network.h
src/settings-panels/: network-panel.c  settings-panel.c  settings-panels.h
